sample/asm/invalid_operand_types/feq.asm
.function: main
    register (class 1 Foo)
    new 1 Foo

    fstore 2 1.0

    feq 3 1 2

    izero 0
    return
.end
